# resume-recommender

./: .gitignore  404.html  6700 final presentation.pptx  Dockerfile  README.md  docker-compose.yml  huggingface.yaml  index.html  mkdocs.yml  pyproject.toml  run_docker.sh  setup_local.sh  test.ipynb
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
backend/: .env  Dockerfile  __init__.py  app.py  cache.json  job_fetcher.py  nlp_model.py  nlp_model_stub.py  requirements.txt
backend/api/: index.html
backend/nlp_model/: __init__.py  extract_job_skills_from_list.py  resume_parser.py  skills_dict.py  tfidf_matcher.py
backend/static/: index.html
backend/static/assets/: index-CJMRcZeB.js
deployment/compose/: index.html
deployment/hf/: index.html
docs/: architecture.md  index.md
docs/backend/: api.md
docs/deployment/: compose.md  hf.md
docs/model/: interface.md
frontend/: Dockerfile
frontend/src/: App.tsx  index.css
frontend/src/api/: apiClient.ts
frontend/src/components/: JobCard.tsx  JobDetailCard.tsx
frontend/src/pages/: JobFeedPage.tsx  (+4 more)
model/interface/: index.html
resume-recommender-docs/: 00_development_sequence.md  01_project_initialization.md  02_frontend_layout_structure.md  03_backend_api_skeleton_v4.md  04_model_interface_stub.md  05_frontend_backend_integration_v3.md  06_docker_deployment_guide.md
resume-recommender-docs-v2/: 00_overview.md  api_contracts_final.md  model_requirements_v5.md  shared_guidelines.md  testing_checklist.md
search/: search_index.json
tests/: test_recommend_jobs.py  test_resume_parser.py
(+3 files in other folders)
